Promotion of infra and o11y charts to public repo (releases/1.8)

--- a/charts/dp-config-es/templates/apm.yaml
+++ b/charts/dp-config-es/templates/apm.yaml
@@ -28,4 +28,10 @@ spec:
           konghq.com/protocol: https
       spec:
         type: ClusterIP
+  podTemplate:
+    spec:
+      containers:
+        - name: apm-server
+          resources:
+            {{- toYaml .Values.apm.resources | nindent 12 }}
 {{- end -}}
