--- a/charts/dp-configure-namespace/charts/config/values.yaml
+++ b/charts/dp-configure-namespace/charts/config/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -10,7 +10,7 @@ global:
     dataPlaneId: "abcd"
     #[optional] Create an image pull secret <dpId> with this creds
     containerRegistry:
-      url: "reldocker.tibco.com" 
+      url: ""
       # username: ""
       # password: ""
       # email: "tibco-plt@tibco.com"
