--- a/charts/dp-core-infrastructure/values.yaml
+++ b/charts/dp-core-infrastructure/values.yaml
@@ -21,6 +21,8 @@ global:
 
     enableResourceConstraints: true
     cpCertificateSecret: ""
+    helmRepo:
+      certificateSecret: ""
   logging:
     fluentbit:
       enabled: true
