--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -25,8 +25,12 @@ global:
         serviceAccountName: ""
     serviceLogs:
       enabled: false
+    serviceSvcLogs:
+      enabled: false
     serviceTraces:
       enabled: false
+    svcPod:
+      enabled: true
     service:
       pipelines:
         logs:
