--- a/charts/tp-cp-bootstrap/charts/router-operator/templates/fluentbit-configmap.yaml
+++ b/charts/tp-cp-bootstrap/charts/router-operator/templates/fluentbit-configmap.yaml
@@ -44,11 +44,7 @@ data:
     [FILTER]
       Name              record_modifier
       Match             cp.*
-      Record            pod.namespace ${POD_NAMESPACE}
-      Record            pod.name ${POD_NAME}
-      Record            pod.id ${POD_ID}
       Record            container.name ${CONTAINER_NAME}
-      Record            host.ip ${HOST_IP}
       Remove_key        stream
       Remove_key        _p
 
@@ -63,14 +59,9 @@ data:
       Name lua
       Match cp.*
       Script update_record.lua
-      Call update_record_v2
+      Call update_record
 
   output.conf: |
-    [OUTPUT]
-      Name   stdout
-      Match  cp.*
-      Format json
-
     [OUTPUT]
       Name                 opentelemetry
       Match                cp.*
@@ -105,18 +96,7 @@ data:
           end
         end
         newLog["msg"] = newMsg
-        record["log"] = newLog
-      end
-      return 2, timestamp, record
-    end
-    function update_record_v2(tag, timestamp, record)
-      local newLog = record["log"]
-      if newLog ~= nil then
-        newLog["pod.namespace"]  = record["pod.namespace"]
-        newLog["pod.name"] = record["pod.name"]
-        newLog["pod.id"] = record["pod.id"]
         newLog["container.name"] = record["container.name"]
-        newLog["host.ip"] = record["host.ip"]
         record["log"] = newLog
         return 2, timestamp, record
       end
