--- a/charts/tp-cp-bootstrap/templates/env.yaml
+++ b/charts/tp-cp-bootstrap/templates/env.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -12,7 +12,7 @@ metadata:
     {{- include "tp-cp-bootstrap.labels" . | nindent 4 }}
 data:
   CP_SERVICE_ACCOUNT_NAME: {{ include "tp-cp-bootstrap.serviceAccount" . }}
-  CP_PVC_NAME: {{ include "tp-cp-bootstrap.pvc" .}}
+  CP_PVC_NAME: {{ .Values.global.external.storage.pvcName | default (include "tp-cp-bootstrap.pvc" .) }}
   CP_CONTAINER_REGISTRY: {{ .Values.global.tibco.containerRegistry.url }}
   {{- if and .Values.global.tibco.containerRegistry.username .Values.global.tibco.containerRegistry.password }}
   CP_CONTAINER_REGISTRY_IMAGE_PULL_SECRET_NAME: {{ include "tp-cp-bootstrap.container-registry.secret" . }}
@@ -29,6 +29,9 @@ data:
   CP_ENABLE_RESOURCE_CONSTRAINTS: {{ .Values.global.tibco.enableResourceConstraints | quote }}
   {{- if .Values.global.tibco.containerRegistry.repository }}
   CP_CONTAINER_REGISTRY_REPO: {{ .Values.global.tibco.containerRegistry.repository }}
+  {{- end }}
+  {{- if .Values.global.tibco.containerRegistry.certificateSecret }}
+  CP_CONTAINER_REGISTRY_CERTIFICATE_SECRET: {{ .Values.global.tibco.containerRegistry.certificateSecret | quote }}
   {{- end }}
   {{- if .Values.global.tibco.proxy.httpProxy }}
   CP_HTTP_PROXY: {{ .Values.global.tibco.proxy.httpProxy | quote }}
