--- a/charts/dp-config-es/values.yaml
+++ b/charts/dp-config-es/values.yaml
@@ -42,6 +42,13 @@ es:
       nginx.ingress.kubernetes.io/backend-protocol: HTTPS
       nginx.ingress.kubernetes.io/proxy-ssl-verify: 'false'
       konghq.com/https-redirect-status-code: "302"
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "2Gi"
+    limits:
+      cpu: "1"
+      memory: "2Gi"
 
 kibana:
   enabled: true
@@ -57,6 +64,13 @@ kibana:
       nginx.ingress.kubernetes.io/backend-protocol: HTTPS
       nginx.ingress.kubernetes.io/proxy-ssl-verify: 'false'
       konghq.com/https-redirect-status-code: "302"
+  resources:
+    requests:
+      cpu: "150m"
+      memory: "1Gi"
+    limits:
+      cpu: "1"
+      memory: "2Gi"
 
 apm:
   enabled: true
@@ -72,6 +86,13 @@ apm:
       nginx.ingress.kubernetes.io/backend-protocol: HTTPS
       nginx.ingress.kubernetes.io/proxy-ssl-verify: 'false'
       konghq.com/https-redirect-status-code: "302"
+  resources:
+    requests:
+      cpu: "50m"
+      memory: "128Mi"
+    limits:
+      cpu: "250m"
+      memory: "512Mi"
 
 index:
   enabled: true
