--- a/charts/tp-cp-bootstrap/charts/hybrid-proxy/templates/fluentbit-configmap.yaml
+++ b/charts/tp-cp-bootstrap/charts/hybrid-proxy/templates/fluentbit-configmap.yaml
@@ -43,6 +43,7 @@ data:
     [FILTER]
       Name              record_modifier
       Match             cp.*
+      Record            container.name ${CONTAINER_NAME}
       Remove_key        stream
       Remove_key        _p
 
@@ -60,11 +61,6 @@ data:
       Call update_record
 
   output.conf: |
-    [OUTPUT]
-      Name   stdout
-      Match  cp.*
-      Format json
-
     [OUTPUT]
       Name                 opentelemetry
       Match                cp.*
@@ -99,8 +95,10 @@ data:
           end
         end
         newLog["msg"] = newMsg
+        newLog["container.name"] = record["container.name"]
         record["log"] = newLog
+        return 2, timestamp, record
       end
-      return 2, timestamp, record
+      return 1, timestamp, record
     end
 {{- end -}}
